--- a/views/index.erb
+++ b/views/index.erb
@@ -1,35 +1,34 @@
 <html>
+<head>
+  <title>Reverse!</title>
+</head>
 <body>
-<h1>Simple Echo & Chat Server</h1>
-<form id="form">
-  <input type="text" id="input" value="send a message"></input>
-</form>
-<div id="msgs"></div>
-</body>
+<input type="text" id="input" />
+<ul id="messages"></ul>
 
+<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript">
-    window.onload = function(){
-        (function(){
-            var show = function(el){
-                return function(msg){ el.innerHTML = msg + '<br />' + el.innerHTML; }
-            }(document.getElementById('msgs'));
-
-            var ws       = new WebSocket('ws://' + window.location.host + window.location.pathname);
-            ws.onopen    = function()  { show('websocket opened'); };
-            ws.onclose   = function()  { show('websocket closed'); }
-            ws.onmessage = function(m) { show('websocket message: ' +  m.data); };
-
-            var sender = function(f){
-                var input     = document.getElementById('input');
-                input.onclick = function(){ input.value = "" };
-                f.onsubmit    = function(){
-                    ws.send(input.value);
-                    input.value = "send a message";
-                    return false;
-                }
-            }(document.getElementById('form'));
-        })();
+    var append_li = function (str) {
+        $('#messages').append($('<li>').text(str));
     }
+    var ws_uri = location.href.replace(/^http/, 'ws');
+    var ws = new WebSocket(ws_uri);
+    ws.onopen = function () {
+        append_li('ws.onopen');
+    }
+    ws.onmessage = function (msg) {
+        append_li('ws.onmessage: "' + msg.data + '" from server');
+    }
+    ws.onclose = function () {
+        append_li('ws.onclose');
+    }
+    var input = $('#input')
+    input.change(function () {
+        var msg = input.val();
+        ws.send(msg);
+        append_li('"' + msg + '" to server');
+        input.val("");
+    });
 </script>
+</body>
 </html>
-
