--- a/views/index.erb
+++ b/views/index.erb
@@ -1,12 +1,23 @@
 <html>
 <head>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
   <title>Reverse!</title>
 </head>
 <body>
-<input type="text" id="input" />
-<ul id="messages"></ul>
-
-<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<!-- Compiled and minified JavaScript -->
+<div class="container">
+  <input type="text" id="input" />
+</div>
 <script type="text/javascript">
     var append_li = function (str) {
         $('#messages').append($('<li>').text(str));
@@ -30,5 +41,8 @@
         input.val("");
     });
 </script>
+<div class="container">
+<ul id="messages"></ul>
+<button class="btn">Clique</button></div>
 </body>
 </html>
